<resources>
    <string name="app_name">CoinListing</string>
    <string name="text_top_rank_title">Top <font color="#C52322">3</font> rank crypto</string>
    <string name="text_buy_sell_and_hold">Buy, sell and hold crypto</string>
    <string name="text_could_not_load_data">Could not load data</string>
    <string name="text_try_again">Try again</string>
    <string name="text_close">Close</string>
    <string name="text_could_not_load_data_for_this_coin">Could not load data for this coin</string>
    <string name="text_market_cap">MARKET CAP</string>
    <string name="text_price">PRICE</string>
</resources>