<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_coin_detail">

        <ProgressBar
            android:id="@+id/pgb_loading"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layout_coin_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="32dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toTopOf="@id/tv_coin_detail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_coin_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_coin_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/iv_coin_icon"
                        app:layout_constraintTop_toTopOf="@+id/iv_coin_icon"
                        tools:text="Name"
                        tools:textColor="#F7931A" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_coin_symbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:textColor="@color/detail_sub"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_coin_name"
                        app:layout_constraintStart_toEndOf="@+id/tv_coin_name"
                        app:layout_constraintTop_toTopOf="@+id/tv_coin_name"
                        tools:text="(CNC)" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/text_price"
                        android:textColor="@color/detail_title"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/tv_coin_name"
                        app:layout_constraintTop_toBottomOf="@+id/tv_coin_name" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_coin_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/detail_price"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_price"
                        app:layout_constraintStart_toEndOf="@+id/tv_price"
                        app:layout_constraintTop_toTopOf="@id/tv_price"
                        tools:text="$$$" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_market_cap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/text_market_cap"
                        android:textColor="@color/detail_title"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@+id/tv_price"
                        app:layout_constraintTop_toBottomOf="@+id/tv_price" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_coin_market_cap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/detail_price"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_market_cap"
                        app:layout_constraintStart_toEndOf="@+id/tv_market_cap"
                        app:layout_constraintTop_toTopOf="@id/tv_market_cap"
                        tools:text="$$$" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_coin_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/detail_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/layout_go_to_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#EEEEEE" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16sp"
                    android:text="GO TO WEBSITE"
                    android:textColor="#38A0FF"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/HeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_could_not_load_data"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_try_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_try_again"
                android:textColor="#999999"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_error_uuid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/HeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_could_not_load_data_for_this_coin"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_close"
                android:textColor="#999999"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>